# smart-battery-predictor

./: .env  .env.example  .gitignore  README.md  load_real_data.py  pyproject.toml  run_ingestion.py  run_pipeline.py  test_env.py  test_real_api.py
scripts_dev/: check_db.py  load_real_weather.py  run_modeling.py  test_weather.py
src/: config.py
src/ingestion/: esios_client.py  weather_client.py
src/models/: train.py
src/orchestration/: assets.py  definitions.py
src/transformation/: feature_builder.py  price_loader.py  weather_loader.py
