[project]
name = "proyecto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dagster>=1.13.9",
    "dagster-webserver>=1.13.9",
    "duckdb>=1.5.3",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.7.2",
    "xgboost>=3.2.0",
]
